removed the extra padding in time and sales table. fixed its header spacings.

--- a/src/app/feature/components/ddx-time-and-sales/ddx-time-and-sales.component.scss
+++ b/src/app/feature/components/ddx-time-and-sales/ddx-time-and-sales.component.scss
@@ -10,10 +10,9 @@
   background-color: $ddx-dark-main;
 
   .sale__header {
-    padding: 10px;
-
     .sale-header__title {
       margin-bottom: 15px;
+      padding: 5px;
     }
   }
 
